style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*shared style*/
.font-open-sans {
  font-family: "Open Sans", sans-serif;
  font-optical-sizing: auto;
}

.logo h2{
    font-size: 45px;
    font-weight: 900;

}
.color-orange{
    color: #FD6E0A;

    
}

.btn{
    background-color: #FD6E0A;
    border: none;
    padding: 18px 35px;
    border-radius: 5px;
    font-size: 20px;
    font-weight: bold;
    color: white;
    cursor: pointer;
    



}
/*main style*/
header{
    background-color: #FFF8F3;
    padding-top: 50px;
    background: url(../images/developer.png), url(../images/header_bg.png), #FFF8;
    background-repeat: no-repeat;
    background-position: top left, bottom right;
}
nav{
    width: 71%;
    max-width: 1140px;
    display: flex;
    margin: 0 auto;
    justify-content: space-between;
    align-items: center;
}
nav .menu{
    display: flex;
    list-style-type: none; 
    gap:51px;
    align-items: center;

}
nav .menu a{
    font-size: 20px;
    color: #474747;
    text-decoration: none;
}
#banner{
    /* border: 1px solid red; */
    margin:47px 38px 0 230px ;
    display: flex;
    justify-content: space-between;
    align-items: center;
    
}
.banner-content{
    max-width: 585px;

}
#banner .banner-content h2{
    font-size: 45px;
    font-weight: 600;
    color: #474747;
    margin-bottom: 5px; 

}
#banner .banner-content h1{
    font-size: 85px;
    font-weight: bold;
    color: #181818;
    margin-bottom: 20px;
}
#banner .banner-content p{
    font-size: 18px;
    color:#757575;
    line-height: 30px;
    margin-bottom: 30px;
}
#banner .banner-image{
    max-width: 585px;
    vertical-align: middle;

}

